first phase of changes

--- a/src/pages/User.css
+++ b/src/pages/User.css
@@ -4,3 +4,9 @@
     font-weight: 450;
     font-style: normal
 }
+.unbounded-uniquifier-p {
+    font-family: "Unbounded", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+  }
