second phase changes

--- a/src/pages/Register.css
+++ b/src/pages/Register.css
@@ -11,7 +11,7 @@
     font-style: normal;
   }
 .card-color{
-    background-color: #39545B;
+    background-color: #0564ad97;
   }
 .contact-card{
     color: #EA8E1D;
